@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-06-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-24T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-07T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
